<resources>
    <string name="app_name">"TPV Restaurante"</string>
    <string name="app_name_timetable">"TimeTable"</string>
    <string name="titulopersonalizado">TPV Android</string>
    <string name="app_description">A sample application that allows you to navigate a simple line graph using touch gestures.</string>
    <string name="action_zoom_in">Demo zoom in</string>
    <string name="action_zoom_out">Demo zoom out</string>
    <string name="action_pan_left">Demo pan left</string>
    <string name="action_pan_right">Demo pan right</string>
    <string name="action_pan_up">Demo pan up</string>
    <string name="action_pan_down">Demo pan down</string>
    <string name="controlpedidomesa">Control Pedido Mesa</string>
    <string name="titulopedidomesa">Creacion Pedidos desde Mesa</string>
    <string name="pedidomesa">Pedido Mesa</string>
    <string name="pedidodesdemesa">Pedido Cliente</string>
    <string name="controlintervalo">Control Intervalo</string>
    <string name="titulointervalo">Control Intervalo Pedido Mesa</string>
    <string name="intervalo">Intervalo</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="grupo">Grupo</string>
    <string name="empresa">Empresa</string>
    <string name="local">Local</string>
    <string name="seccion">Seccion</string>
    <string name="caja">Caja</string>
    <string name="turno">Turno</string>
    <string name="serie">Serie</string>
    <string name="empleados">Empleados</string>
    <string name="rangos">Rangos</string>
    <string name="mesas">Mesas</string>
    <string name="mesa">Mesa</string>
    <string name="moneda">Moneda</string>
    <string name="terminal">Imprimir</string>
    <string name="factura">Factura</string>
    <string name="pedido">Pedido</string>
    <string name="fechaapertura">Fecha Apertura</string>
    <string name="fecha">Fecha</string>
    <string name="maximocaja">Maximo Caja</string>
    <string name="tipocobro">Tipo Cobro</string>
    <string name="totalfactura">Total Factura</string>
    <string name="totalcobro">Total Cobro</string>
    <string name="totaldiferencia">Diferencia</string>
    <string name="saldoinicio">Diferencia</string>
    <string name="firma">Firma</string>
    <string name="articulo">Articulo</string>
    <string name="nombre">Nombre</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio">Precio</string>
    <string name="importe">Importe</string>
    <string name="iva">Iva</string>
    <string name="tipodescuento">Tipo Descuento</string>
    <string name="observacion">Observacion</string>
    <string name="id">Id</string>
    <string name="plato">Plato</string>
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>
    <string name="salir">Salir</string>
    <string name="imprimir">Imprimir</string>
    <string name="diariocaja">Diario Caja</string>
    <string name="pantalla">Pantalla</string>
    <string name="impresora">Impresora</string>
    <string name="listaseccion">Lista Seccion</string>
    <string name="listacaja">Lista Caja</string>
    <string name="listaturno">Lista Turno</string>
    <string name="modificar">Modificar</string>
    <string name="anular">Anular</string>
    <string name="cobrar">Cobrar</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="facturar">Facturar</string>
    <string name="action_settings">Configuración</string>
    <string name="action_search">Buscar</string>
    <string name="action_carrito">Añadir al carrito</string>
    <string name="action_info">Informacion</string>
    <string name="action_shop">Carrito De Compras</string>
    <string name="grupitem_seccion">Secciones</string>
    <string name="item_mesas">Mesas</string>
    <string name="item_planning">Planning</string>
    <string name="item_seccion">Secciones</string>
    <string name="item_caja">Cajas</string>
    <string name="item_turno">Turnos</string>
    <string name="item_dcj">Diarios Cajas</string>
    <string name="item_pedido">Pedidos</string>
    <string name="item_ticket">Facturas</string>
    <string name="item_print">Print</string>
    <string name="item_archivo">Archivo</string>
    <string name="item_message">Mensaje</string>
    <string name="item_web">Web Administrar</string>
    <string name="item_inicio">Inicio</string>
    <string name="item_salir">Salir</string>
    <string name="item_cuenta">Mi Cuenta</string>
    <string name="item_categorias">Categorías</string>
    <string name="item_nfc">NFC Lector Tarjeta</string>
    <string name="item_cartas">Cartas</string>
    <string name="item_configuracion">Configuración</string>
    <string name="grupitem_configuracion">Configuraciones</string>
    <string name="titulo_comidas_populares">Lo más pedido</string>
    <string name="titulo_tab_platillos">PLATILLOS</string>
    <string name="titulo_tab_bebidas">BEBIDAS</string>
    <string name="titulo_tab_postres">POSTRES</string>
    <string name="titulo_tab_perfil">PERFIL</string>
    <string name="titulo_tab_direcciones">DIRECCIONES</string>
    <string name="titulo_tab_tarjetas">TARJETAS</string>
    <string name="titulo_tab_OpenSeccion">ABIERTO</string>
    <string name="titulo_tab_CloseSeccion">CERRADO</string>
    <string name="titulo_tab_PrintSeccion">PRINT</string>
    <string name="titulo_tab_OpenCaja">ABIERTO</string>
    <string name="titulo_tab_CloseCaja">CERRADO</string>
    <string name="titulo_tab_PrintCaja">PRINT</string>
    <string name="titulo_tab_OpenTurno">ABIERTO</string>
    <string name="titulo_tab_CloseTurno">CERRADO</string>
    <string name="titulo_tab_PrintTurno">PRINT</string>
    <string name="titulo_tab_OpenDcj">ABIERTO</string>
    <string name="titulo_tab_CloseDcj">CERRADO</string>
    <string name="titulo_tab_PrintDcj">PRINT</string>
    <string name="titulo_tab_OpenPedido">ABIERTO</string>
    <string name="titulo_tab_ClosePedido">CERRADO</string>
    <string name="titulo_tab_PrintPedido">PRINT</string>
    <string name="titulo_tab_OpenFactura">ABIERTO</string>
    <string name="titulo_tab_CloseFactura">CERRADO</string>
    <string name="titulo_tab_PrintFactura">PRINT</string>
    <string name="titulo_tab_OpenMessage">ABIERTO</string>
    <string name="titulo_tab_CloseMessage">CERRADO</string>
    <string name="titulo_tab_PrintMessage">PRINT</string>
    <string name="texto_no_tarjetas">No tienes ninguna tarjeta asociada</string>
    <string name="etiqueta_carrito">Carrito</string>
    <string name="titulo_actividad_tickets">Introduccion Articulos</string>
    <string name="titulo_actividad_mesas">Drag Mesas</string>
    <string name="titulo_actividad_print">Imprimir</string>
    <string name="texto_cambiar_contrasena">Cambia tu contraseña</string>
    <string name="etiqueta_contrasena">Contraseña</string>
    <string name="etiqueta_info_usuario">Información del usuario</string>
    <string name="ON_apertura">Abrir Seccion</string>
    <string name="OFF_apertura">Cerrar Seccion</string>
    <string name="ON_cobro">ON Cobro</string>
    <string name="OFF_cobro">OFF Cobro</string>
    <string name="show_date_picker_fragment">Ver Control Fecha</string>
    <string name="btnopenseccion">Abrir Seccion</string>
    <string name="on">ON Guardar</string>
    <string name="off">OFF Guardar</string>
    <string name="opservidor">HOSTING</string>
    <string name="opidioma">ESP</string>
    <string name="oper_mesas">Operaciones Mesa</string>
  <string name="ok">Ok</string>
  <string name="cancel">Cancelar</string>
    <string name="linear_layout">Linear layout</string>
    <string name="grid_layout">Grid layout</string>
    <string name="grid_layout_variable_span_size">Grid layout with variable span size</string>
    <string name="grid_layout_header">Grid layout with header</string>
  <string name="grid_layout_header_text">
    Grid layout with header, spanning 2 columns
  </string>
    <string name="grid_layout_auto_fit">Grid layout, auto fit</string>
    <string name="grid_layout_auto_fit_header">Grid layout, auto fit, with header</string>
  <string name="grid_layout_auto_fit_header_text">
    Grid layout with header, spanning all the columns
  </string>
    <string name="grid_layout_add_remove">Grid layout, add and remove</string>
    <string name="add_item">Add item</string>
    <string name="agreement">Registra Firma</string>
    <string name="clear_pad">Limpiar</string>
    <string name="save_signature">Guardar Firma</string>
    <string name="app_title">ePOS2 CommBox</string>
    <string name="btn_send">Send Message</string>
    <string name="btn_clear">Clear</string>
    <string name="txt_target">TCP:192.168.192.168[Box1]</string>
    <string name="txt_sender_id">App1</string>
    <string name="txt_reciever_id">App2</string>
    <string name="txt_text">Test Message</string>
    <string name="title_target">Target </string>
    <string name="title_my_id">My ID  </string>
    <string name="title_member_id">Target ID</string>
    <string name="title_message">Message</string>
    <string name="title_err_code">Error Code</string>
    <string name="title_err_method">Method</string>
    <string name="title_msg_result">Result</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btimprimirventa">Imprimir Venta</string>
    <string name="btbuscarimp">Buscar Impresora</string>
    <string name="print_image_button">Print Picture</string>
    <string name="print_page_button">Print Page</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dignissim metus sit amet nisl aliquam, eget tincidunt velit consectetur. Suspendisse accumsan vel est nec facilisis. Fusce leo eros, ultricies quis viverra sit amet, bibendum eu elit. Morbi id nunc porttitor, consequat urna quis, imperdiet justo. Curabitur sagittis ornare nulla ac dictum. Maecenas dignissim turpis in justo pharetra, in malesuada nunc ultricies. Nunc vulputate sem nec urna accumsan, ut egestas neque placerat. Aenean interdum vestibulum nisi, vitae consequat urna. Ut ut dolor ac urna viverra tincidunt. Nullam faucibus cursus libero id hendrerit. In non leo eget enim adipiscing condimentum. Quisque faucibus neque in feugiat porttitor. Quisque sit amet felis quis lorem porta aliquam. Fusce luctus nunc a velit consectetur, eu lobortis ligula lacinia. Ut commodo lectus vel leo molestie bibendum.</string>
    <string name="main_button_discovery">Printer Discovery</string>
    <string name="main_button_open">Open</string>
    <string name="main_button_close">Close</string>
    <string name="main_button_text">Text</string>
    <string name="main_button_image">Image</string>
    <string name="main_button_barcode">Barcode</string>
    <string name="main_button_2dcode">2D Code</string>
    <string name="main_button_pagemode">Page Mode</string>
    <string name="main_button_cut">Cut</string>
    <string name="main_button_getstatustate">Get Status</string>
    <string name="main_button_getname">Get Printer Name</string>
    <string name="discovery_label_devtype">Device Type</string>
    <string name="discovery_radio_tcp">TCP(Wi-Fi)</string>
    <string name="discovery_radio_blueooth">Bluetooth</string>
    <string name="discovery_radio_usb">USB</string>
    <string name="discovery_label_printerlist">Printer List</string>
    <string name="open_button_open">Open</string>
    <string name="open_label_devtype">Device Type</string>
    <string name="open_radio_tcp">TCP(Wi-Fi)</string>
    <string name="open_radio_blueooth">Bluetooth</string>
    <string name="open_radio_usb">USB</string>
    <string name="open_label_ip">IP Address / MAC Address / USB Device Node</string>
    <string name="open_label_pritner">Printer Name</string>
    <string name="open_label_langname">Language</string>
    <string name="text_button_print">Print</string>
</resources>