<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="categoria_servidor_datos"
        android:title="Servidor">
        <ListPreference
            android:defaultValue="@string/opservidor"
            android:key="opurl"
            android:title="Servidor Datos"
            android:summary="Asignacion Servidor Datos Aplicacion"
            android:dialogTitle="Indicar Servidor"
            android:entries="@array/servidor"
            android:entryValues="@array/url" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="categoria_idioma"
        android:title="Idiomas">
        <ListPreference
            android:defaultValue="@string/opidioma"
            android:key="opidioma"
            android:title="Lenguaje"
            android:summary="Asignacion Idioma Aplicacion"
            android:dialogTitle="Indicar Idioma"
            android:entries="@array/lenguaje"
            android:entryValues="@array/idioma" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="categoria_viaual_tablet"
        android:title="Visual">
        <ListPreference
            android:defaultValue="0"
            android:key="optipotablet"
            android:title="Tipo Tablet"
            android:summary="Asignacion Tipo Tablet"
            android:dialogTitle="Control Tipo Tablet"
            android:entries="@array/tipotablet"
            android:entryValues="@array/ctrltipotablet" />
        <ListPreference
            android:defaultValue="02"
            android:key="opgrid"
            android:title="Grid Articulos"
            android:summary="Asignacion Tamaño Imagenes Articulos"
            android:dialogTitle="Indicar Tamaño"
            android:entries="@array/tipogrid"
            android:entryValues="@array/tamanyo" />
        <ListPreference
            android:defaultValue="64"
            android:key="opmesas"
            android:title="Planning Mesas"
            android:summary="Asignacion Tamaño Imagenes Mesas"
            android:dialogTitle="Indicar Tamaño"
            android:entries="@array/tipomesa"
            android:entryValues="@array/tamanyo_mesa" />
        <ListPreference
            android:defaultValue="0"
            android:key="optoolbar"
            android:title="Toolbar Filtros"
            android:summary="Activar/Desactivar al iniciar Toolbar Filtros"
            android:dialogTitle="Indicar Modo Toolbar"
            android:entries="@array/tipotoolbar"
            android:entryValues="@array/modo" />
        <ListPreference
            android:defaultValue="0"
            android:key="optab"
            android:title="Tab Tipos Articulos"
            android:summary="Asignacion Modo Scroll Tipos Articulos"
            android:dialogTitle="Indicar Tipo Scroll"
            android:entries="@array/tipotab"
            android:entryValues="@array/modotab" />
        <ListPreference
            android:defaultValue="21"
            android:key="optipoarticulo"
            android:title="Tipo Articulo"
            android:summary="Asignacion Tamaño Descripcion Tipo Articulo"
            android:dialogTitle="Indicar Tamaño"
            android:entries="@array/tipoarticulo"
            android:entryValues="@array/tamanyo_tipoarticulo" />
        <ListPreference
            android:defaultValue="false"
            android:key="optabtodos"
            android:title="Carga Tab Tipos Articulos"
            android:summary="Asignacion Carga Todos Tabs Tipos Articulos"
            android:dialogTitle="Control Tab Todos Tipos Articulos"
            android:entries="@array/tabtodos"
            android:entryValues="@array/ctrltabtodos" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="categoria_log"
        android:title="Log">
        <ListPreference
            android:defaultValue="false"
            android:key="oplog"
            android:title="Guardar Log"
            android:summary="Creacion Fichero LOG Aplicacion"
            android:dialogTitle="Control Log"
            android:entries="@array/log"
            android:entryValues="@array/ctrllog" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="categoria_pedidos_mesa"
        android:title="@string/pedidomesa">
        <ListPreference
            android:defaultValue="false"
            android:key="oppedidomesa"
            android:title="@string/pedidodesdemesa"
            android:summary="@string/titulopedidomesa"
            android:dialogTitle="@string/controlpedidomesa"
            android:entries="@array/pedidomesa"
            android:entryValues="@array/ctrlpedidomesa" />
        <ListPreference
            android:defaultValue="10000"
            android:key="opintervalo"
            android:title="@string/intervalo"
            android:summary="@string/titulointervalo"
            android:dialogTitle="@string/controlintervalo"
            android:entries="@array/time_mesa"
            android:entryValues="@array/intervalo" />
    </PreferenceCategory>

<!--    <PreferenceCategory
        android:key="categoria_notificaciones"
        android:title="@string/categoria_notificaciones">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/lista_frecuencia"
            android:entryValues="@array/lista_valores_frecuencia"
            android:key="@string/key_preferencia"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/titulo_preferencia" />
    </PreferenceCategory>-->
</PreferenceScreen>
